# zenon_modulo

./: #lkproof.ml#  .gitignore  CCVector.ml  INSTALL  LICENSE  Makefile  Makefile.bench  Makefile.tptp  README  README.md  arith.ml  arith.mli  basics_minimal.dk  basics_minimal.lp  bench_du_03_05_2015  cc.dk  cc.lp  classic.dk  classicalCoqTerm.ml  classicalCoqTerm.mli  config.mli  configure  coqterm.ml  coqterm.mli  dk_bool.dk  dk_bool.lp  dk_logic.dk  dk_logic.lp  dk_tuple.dk  dk_tuple.lp  dkcheck  dkprint.ml  dkterm.ml  dkterm.mli  dune  dune-project  enum.ml  enum.mli  eqrel.ml  eqrel.mli  (+118 more)
.github/workflows/: main.yml
FOFSELECTION/: AGT001+1.p  AGT001+2.p  AGT002+1.p  AGT002+2.p  AGT003+1.p  AGT003+2.p  AGT004+1.p  AGT004+2.p  AGT005+2.p  AGT014+1.p  AGT014+2.p  AGT015+1.p  AGT015+2.p  AGT016+1.p  AGT016+2.p  AGT017+1.p  AGT017+2.p  ALG017+1.p  ALG021+1.p  ALG022+1.p  ALG025+1.p  ALG028+1.p  ALG036+1.p  ALG039+1.p  ALG043+1.p  ALG044+1.p  ALG090+1.p  ALG091+1.p  ALG092+1.p  ALG093+1.p  ALG094+1.p  ALG095+1.p  ALG186+1.p  ALG187+1.p  ALG188+1.p  ALG189+1.p  ALG194+1.p  ALG198+1.p  ALG199+1.p  ALG200+1.p  (+1236 more)
examples/: bool_and_commute.coz  bool_and_commute3.coz  empty_set_example.p  lemmes_bbook-B_book_lemmas-property_211.p  p4_0_part1-B_translation-bbyy_25.p
logic/: basics_minimal.lp  ccc.lp  classic.lp  dk_bool.lp  dk_logic.lp  dk_tuple.lp  fol.lp  icc.lp  ll.lp  ll_nd.lp  nd.lp  nd_eps.lp  nd_eps_aux.lp  nd_eps_full.lp  sigmafol.lp  sigmand.lp  zen.lp  zen_bis.lp  zenon_focal.lp
test/: poly01.t
tff1_examples/: lemmes_bbook-B_book_lemmas-equal_range_10.p  lemmes_bbook-B_book_lemmas-monot_relation.p  lemmes_bbook-B_book_lemmas-subset_transitivity.p
